static/css/auth.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Helvetica, sans-serif;
}

body{
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

#title{
    display: inline-block;

    font-size: 3.3em;
    font-weight: 200;
    margin-bottom: 80px;

    transition: all 0.5s ease;
}
#title:hover{
    transform: skewX(-15deg);
}

#container {
    height: 660px;
    width: 400px;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    border-radius: 15px;
    border: 2px solid black;
    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.231);
}
form{
    text-align: center;
}

.inputBox{
    width: 220px;
    text-align: center;
    margin: 0 auto;
}

.inputBox label{
    font-weight: 300;
    font-size: 1.3em;
}

.inputBox input{
    border: 1px solid rgb(188, 188, 188);
    width: 210px;
    padding: 5px;

    border-top: none;
    border-left: none;
    border-right: none;

    font-weight: 200;
    font-size: 1em;
}

.inputBox input:focus{
    border-color: black;
    outline: none;
}

#usernameBox{
    padding-bottom: 30px;
}

#submitBtn{
    margin-top: 30px;
    margin-bottom: 90px;
    width: 210px;
    padding: 3px;

    font-weight: 100;
    font-size: 1.1em;

    background-color: white;

    border: 1.5px solid black;
    border-radius: 5px;
}

#submitBtn:hover{
    background-color: rgb(237, 237, 237);
}

#submitBtn:active{
    background-color: rgb(193, 193, 193);
}

#container a{
    font-weight: 100;
    font-style: italic;
    font-size: 1em;
    padding: 10px;
}

#errorMsg{
    font-weight: 100;
    font-style: italic;
    
    margin: 0 auto;
    width: 360px;
    height: 40px;

    text-align: center;
    vertical-align: middle;
}

#errorMsg p{
    background-color: rgb(253, 51, 51);
    color: white;

    border-radius: 15px;
    padding: 10px;
}
#errorMsg p:empty{
    display: none;
}

#returnBtn{
    display: flex;
    justify-content: center;

    position: relative;
    bottom: -30px;

    background-color: black;
    border-radius: 15px;
    border: none;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.236);
}
#returnBtn:hover{
    background-color: rgb(95, 95, 95);
}

#returnBtn:active{
    background-color: rgb(240, 240, 240);
    box-shadow: none;
    padding: 3px;
}
#returnBtn:active .material-symbols-outlined{
    color: black;
}
.material-symbols-outlined{
    color: white;
}

